// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ResourceLocator should render with type full 1`] = `
<div
  class="resourceLocator"
>
  <span
    class="fixed"
  >
    /
  </span>
  <label
    class="input default"
  >
    <input
      type="text"
      value="parent"
    />
  </label>
</div>
`;

exports[`ResourceLocator should render with type leaf 1`] = `
<div
  class="resourceLocator"
>
  <span
    class="fixed"
  >
    /parent/
  </span>
  <label
    class="input default"
  >
    <input
      type="text"
      value="child"
    />
  </label>
</div>
`;
